Fixes to info section made imgs larger and more padding between them fixed off center text under image

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
 }
 
 .text {
-    max-width: 100px;
+    max-width: 120px;
 }
 
 
@@ -97,8 +97,8 @@ body .container {
 
 
 .imginfo {
-    width: 75px;
-    height: 75px;
+    width: 120px;
+    height: 120px;
     border-radius: 25% 10%;
     border: 3px solid #3882F6;
     
@@ -107,7 +107,7 @@ body .container {
 
 .info {
     text-align: center;
-    padding: 10px;
+    padding: 18px;
    
 }
 
